Fixed gap between headers and navbar.

--- a/MAIN/static/css/about.css
+++ b/MAIN/static/css/about.css
@@ -5,6 +5,7 @@
     overflow-x: hidden;
     z-index: 2;
     min-height: 100vh;
+    margin-top: -140px;
 }
 
 .about-header h1 {
