--- a/MAIN/static/css/contact.css
+++ b/MAIN/static/css/contact.css
@@ -1,11 +1,12 @@
 /* Contact Page Styling with Fixed Dimensions */
 .contactpage-section {
-    padding: 20px 0 50px 0;
+    padding: 0px 0 50px 0;
     position: relative;
     overflow-x: hidden;
     z-index: 2;
     min-height: 100vh;
     width: 100%;
+    margin-top: -60px;
 }
 
 /* Main header - moved up closer to navbar */
